# HeroCrafter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/accounts/: urls.py  views.py
src/core/: settings.py  urls.py
src/hero_crafter/: api_views.py  apps.py  models.py  serializers.py  urls.py  util.py  views.py
src/hero_crafter/migrations/: 0001_initial.py  0002_character_biography.py  0003_character_portrait_url.py  0004_alter_character_portrait_url.py
src/hero_crafter/templates/: character.html  create_character.html  home.html
src/templates/: base.html  navbar.html
src/templates/registration/: login.html  signup.html
